--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,7 +1,7 @@
 .Col{
     /* column-rule-color: aquamarine; */
-    column-fill: auto;
-    border: 2px dotted indigo ;
+    /* column-fill: auto;
+    border: 2px dotted indigo ; */
     /* border-color: forestgreen; */
     /* column-rule-style: ; */
   }
@@ -10,5 +10,5 @@ h2{
     color:purple;
 }
 .Row{
-    border: 5px groove indigo;
+    border: 60px groove slategray;
 }
